# recovery_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_strava_integration.py  0003_add_ftp_watts_to_users.py
app/: config.py  main.py  runtime.py  web.py
app/bot/: __init__.py  fsm.py  messages.py  router.py  runner.py
app/bot/handlers/: __init__.py  profile.py  start.py  strava.py  workout.py
app/db/: models.py  session.py
app/domain/: __init__.py  enums.py
app/dto/: __init__.py  recovery.py  workout.py
app/repositories/: __init__.py  strava_connections.py  users.py  workouts.py
app/services/: __init__.py  app_services.py  recommendations.py  strava.py  telegram.py
docker/: start.py
docs/: strava-next.md
tests/: test_bot_runner.py  test_logging_config.py  test_main.py  test_messages_and_recommendations.py  test_onboarding_messages.py  test_strava_disconnect.py  test_workout_service.py
