[project]
name = "recovery-assistant"
version = "0.1.0"
description = "Minimal Telegram bot for cycling recovery recommendations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0,<4.0.0",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.37,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0,<1.0.0",
]

[project.scripts]
recovery-assistant = "app.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
